[metadata]
name = pystache
version = attr: pystache.__version__
author = Chris Wanstrath
author_email = chris@ozmm.org
maintainer = Steve Arnold
maintainer_email = nerdboy@gentoo.org
description = Mustache for Python
url = https://github.com/sarnold/pystache
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
zip_safe = True
include_package_data = True
packages = find:

[options.package_data]
* = *.mustache, *.txt

[options.entry_points]
console_scripts =
    pystache=pystache.commands.render:main
    pystache-test=pystache.commands.test:main

[options.extras_require]
test =
    nose

cov =
    coverage

[bdist_wheel]
universal = 0

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    codecov.yml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist

max-line-length = 110

[nosetests]
traverse-namespace = 1
verbosity = 3
with-coverage = 1
with-doctest = 1
doctest-extension = rst
cover-package = pystache
cover-xml = 1
